--- a/src/fxml/Main.fxml
+++ b/src/fxml/Main.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.*?>
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXCheckBox?>
 <?import com.jfoenix.controls.JFXSlider?>
@@ -13,7 +19,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #005697;" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1280.0" style="-fx-background-color: #005697;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
    <children>
       <SplitPane dividerPositions="0.87468671679198" orientation="VERTICAL" prefHeight="800.0" prefWidth="1280.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
@@ -139,12 +145,12 @@
                                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                  </rowConstraints>
                                  <children>
-                                    <JFXButton fx:id="l2Button1" prefHeight="100.0" prefWidth="150.0" text="L2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" />
-                                    <JFXButton prefHeight="100.0" prefWidth="150.0" text="L1" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
-                                    <JFXButton prefHeight="100.0" prefWidth="150.0" text="G" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
-                                    <JFXButton prefHeight="100.0" prefWidth="150.0" text="2" GridPane.columnIndex="4" GridPane.halignment="CENTER" />
-                                    <JFXButton prefHeight="100.0" prefWidth="134.0" text="3" GridPane.columnIndex="5" GridPane.halignment="CENTER" />
-                                    <JFXButton prefHeight="100.0" prefWidth="150.0" text="1" GridPane.columnIndex="3" GridPane.halignment="CENTER" />
+                                    <JFXButton fx:id="floorL2miniMap" prefHeight="100.0" prefWidth="150.0" text="L2" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" />
+                                    <JFXButton fx:id="floorL1miniMap" prefHeight="100.0" prefWidth="150.0" text="L1" GridPane.columnIndex="1" GridPane.halignment="CENTER" />
+                                    <JFXButton fx:id="floorGminiMap" prefHeight="100.0" prefWidth="150.0" text="G" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
+                                    <JFXButton fx:id="floor1miniMap" prefHeight="100.0" prefWidth="150.0" text="2" GridPane.columnIndex="4" GridPane.halignment="CENTER" />
+                                    <JFXButton fx:id="floor2miniMap" prefHeight="100.0" prefWidth="134.0" text="3" GridPane.columnIndex="5" GridPane.halignment="CENTER" />
+                                    <JFXButton fx:id="floor3miniMap" prefHeight="100.0" prefWidth="150.0" text="1" GridPane.columnIndex="3" GridPane.halignment="CENTER" />
                                  </children>
                               </GridPane>
                            </children>
